# UEDX46460015-MD50ESP32-1.5inch-Touch-Knob-Display

./: .gitignore  LICENSE  README.md
Libraries/: lv_conf.h
Libraries/ESP32_Display_Panel/: ESP_Panel_Board_Supported.h  README_CN.md
Libraries/ESP32_Display_Panel-bugfix-missing_lcd_load_vendor_config/: README.md
Libraries/ESP32_Display_Panel-bugfix-missing_lcd_load_vendor_config/src/board/: ESP_PanelBoard.h
Libraries/ESP32_Display_Panel/docs/: Board_Instructions.md
Libraries/ui/src/: ui.c  ui.h  ui_helpers.c  ui_helpers.h
Libraries/ui/src/images/: ui_img_174066631.c  (+11 more)
examples/Arduino/Porting/: ESP_Panel_Board_Supported.h  Porting.ino  README.md
examples/Arduino/simple_port/: esp_panel_board_supported_conf.h  esp_panel_drivers_conf.h  lv_conf.h  simple_port.ino
examples/ESP-IDF/1.5inch_lvgl_v9_port/: WATCHDOG_RECOVERY_SOLUTION.md  sdkconfig  sdkconfig.defaults  sdkconfig.old  test_watchdog_recovery.sh
examples/ESP-IDF/UEDX46460015-MD50E-IDF/: CMakeLists.txt  sdkconfig
examples/ESP-IDF/UEDX46460015-MD50E-IDF/main/: CMakeLists.txt  example_qspi_with_ram.c  idf_component.yml
examples/ESP-IDF/UEDX46460015-MD50E-IDF/main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h
examples/ESP-IDF/UEDX46460015-MD50E-IDF/main/ui/components/: ui_comp_hook.c
examples/ESP-IDF/UEDX46460015-MD50E-IDF/main/ui/images/: ui_img_2062528660.c  ui_img_2kaoji_png.c  ui_img_4pisa_png.c  ui_img_5liupai_png.c  ui_img_6shutiao_png.c  ui_img_756072277.c
examples/ESP-IDF/UEDX46460015-MD50E-IDF/main/ui/screens/: ui_Screen1.c
examples/PlatformIO/encoder15/: platformio.ini
(+65 files in other folders)
